# brazilian_bonds_data_base

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_bronze.py  run_gold.py  run_lake.py  run_silver.py  run_sync.py
.github/workflows/: tests.yml
docs/: README_PACKAGE_USER_DRAFT.md  _build_docs.py  code_reference_for_ai.md  gold_reader_public_api.md  gold_schema_v2.md  project_architecture_and_dependencies.md  project_bronze_architecture_study.md
legacy/: README.md  run_lake.py
legacy/notebooks/: explore_public_api.ipynb
legacy/rf_lake/: incremental.py  logging.py  pipeline.py
notebooks/: draft.ipynb  test_bronze_reader.ipynb  test_gold.ipynb  test_providers.ipynb  test_silver.ipynb
rf_lake/: __init__.py  bootstrap.py  datasets.py  date_fields.py  incremental.py  inspect_layers.py  logging.py  pipeline.py  settings.py  watermarks.py
rf_lake/bronze/: __init__.py  extract.py  paths.py  pipeline.py
rf_lake/data_reader/: __init__.py  database.py
rf_lake/gold/: __init__.py  load.py  pipeline.py
rf_lake/jobs/: __init__.py  backfill.py  run_daily.py  run_one.py
rf_lake/silver/: __init__.py  contracts.py  normalize.py  pipeline.py  run.py
specs/: cursor_prompt_feature_001_task_1.md  cursor_prompt_feature_002_alias_tasks_1_to_3.md  cursor_prompt_feature_003_task_1.md
src/: main.py
src/app/: __init__.py
src/brazilian_bonds_db/: __init__.py  readers.py  update.py
src/config/: __init__.py  paths.py  settings.py
src/contracts/: __init__.py  bronze.py  silver.py
src/models/: __init__.py  datasets.py  dates.py
src/pipelines/: __init__.py
src/providers/: __init__.py  base.py
tests/: conftest.py  test_incremental_coverage.py  test_lake_layers.py  test_smoke.py
tests/cli/: test_sync_force.py  test_sync_status.py
tests/config/: test_settings.py
(+510 files in other folders)
