[project]
name = "brazil-fixed-income-analytics"
version = "0.1.0"
description = "Fixed Income Pricing and Analytics"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "requests",
    "xlrd >= 2.0.1",
    "sidrapy",
]

[project.optional-dependencies]
docgen = [
    "matplotlib>=3.8",
    "python-docx>=1.1",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
rf-lake-migrate = "rf_lake.gold.db.migrate:apply_migrations"
rf-lake-daily = "rf_lake.jobs.run_daily:run_daily"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rf_lake*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requer data/raw, data/silver e data/app.db populados",
]
